# project-1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
airflow/: README.md
airflow/dags/: ingestion_dag.py
databricks/: README.md  app.yaml
databricks/adapters/: __init__.py  layer2.py  llm_client.py  scoring.py  vector_store.py
databricks/jobs/: 01_ingest_artifacts.py  02_generate_summaries.py  03_generate_user_profiles.py  04_sync_vector_indexes.py
docs/observability/: layer2-testing.md
evaluation/: chatbot_eval_dataset.json  run_eval.py
platform_documents/: Kubeflow_Access_Guide.docx  Kubeflow_First_Notebook.docx  Kubeflow_Spark_Job_Guide.docx
presentation/v1/: Kubeflow_Workspace_Profiling_Architecture_Deck.pptx  data-flow-diagram.mmd  generate_architecture_ppt.py  high-level-architecture.mmd  low-level-architecture.mmd
presentation/v2/: Kubeflow_Workspace_Profiling_Architecture_Deck_v2_Reliance.pptx  data-flow-reliance.mmd  generate_architecture_ppt_v2_reliance.py  high-level-architecture-reliance.mmd  (+1 more)
prompts/: artifact_summary_prompt.txt  user_profile_prompt.txt
src/ingestion/: __init__.py  (+7 more)
webapp/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
(+121 files in other folders)
