[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.1.0",
    "langfuse>=4.5.1",
    "psutil>=7.2.2",
    "python-docx>=1.2.0",
    "ragas>=0.2.0",
    "rapidfuzz>=3.14.5",
]
